[package]
name = "matrix-ipfs-bot"
version = "0.1.0"
authors = ["Marcel <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.7.2"
tokio = { version = "0.2", features = ["full"] }
matrix-sdk = {version = "0.1.0", git = "https://github.com/MTRNord/matrix-rust-sdk", branch="expose-base_client"}
matrix-sdk-common-macros = {version = "0.1.0", git = "https://github.com/MTRNord/matrix-rust-sdk", branch="expose-base_client"}
matrix-sdk-common = {version = "0.1.0", git = "https://github.com/MTRNord/matrix-rust-sdk", branch="expose-base_client"}
url = "2.1.1"
dirs = "2.0.2"
tracing-subscriber = "0.2.5"
async-trait = "0.1.31"
tracing = "0.1"
ruma-api = "0.16.1"
serde = "1.0.114"
reqwest = { version = "0.10", features = ["json"] }
bytes = "0.5"
